Make the test of appengine-testing framework to pass with a JDK17 compiler.
PiperOrigin-RevId: 458231858
Change-Id: I59dc92d528374c3c73650975b9ad424c0abae401